--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:unit": "jest"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -25,8 +26,12 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
+    "@vue/test-utils": "^2.4.6",
+    "babel-jest": "^29.7.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jest": "^29.7.0",
+    "vue-jest": "^5.0.0-alpha.10",
     "webpack-dev-server": "^5.0.4"
   }
 }
