--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "jest"
+    "test:unit": "mochapack --webpack-config mochapack.config.js --require tests/setup.js tests/unit/**/*.spec.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -20,18 +20,26 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.24.5",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "^2.4.6",
-    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "chai": "^4.4.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jest": "^29.7.0",
-    "vue-jest": "^5.0.0-alpha.10",
+    "file-loader": "^6.2.0",
+    "flush-promises": "^1.0.2",
+    "jsdom": "^24.0.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^10.4.0",
+    "mochapack": "^2.1.4",
+    "sinon": "^13.0.1",
+    "vue-loader": "^17.3.1",
+    "webpack": "^5.91.0",
     "webpack-dev-server": "^5.0.4"
   }
 }
